<resources>
    <string name="app_name">Plannr</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loginButtonLabel">Log In</string>
    <string name="registerButtonInLoginLabel">No Account? Register</string>
    <string name="loginButtonInRegisterLabel">Already have an Account? Login</string>
    <string name="registerButtonLabel">Register</string>
    <string name="emailPlaceholder">Email</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="confirmPasswordPlaceholder">Confirm Password</string>
    <string name="loginSubtitle">Login</string>
    <string name="registrationSubtitle">Registration</string>
    <string name="fullNameHint">Full Name</string>

    <string name="admin_coursename_input">Enter course name</string>
    <string name="admin_coursecode_input">Enter course code</string>
    <string name="admin_availability_text">AVAILABILITY</string>
    <string name="admin_prerequisite_text">PREREQUISITE</string>
    <string name="admin_prerequisite_input">Format: CSCB07,MATB41</string>
    <string name="admin_add_button">ADD</string>


    //Strings for the student's list of taken courses
    <string name="sc_availableCourses">Available Courses List</string>
    <string name="sc_availableCourseDetail">Available Course Detail</string>
    <string name="sc_chosenCourses">Chosen Courses List</string>
    <string name="sc_chosenCourseDetail">Chosen Course Detail</string>
    <string name="sc_button_View_Chosen_Courses">Chosen Courses</string>
    <string name="sc_button_Add_New_Courses">Courses Available</string>
    <string name="sc_Button_return">Return</string>
    <string name="sc_studentNameLabel">Name</string>
    <string name="sc_studentIdLabel">Student ID</string>
    <string name="sc_studentName" />

    <string name="sc_hello_blank_fragment">Hello blank fragment</string>
    <string name="sc_courseCode">Course code</string>
    <string name="sc_courseName">Course name</string>
    <string name="sc_course">TextView</string>
    <string name="sc_button_chosen_detail_back">OK</string>
    <string name="sc_addButton">Add</string>
    <string name="sc_nextButton">Next</string>
    <string name="sc_previousButton">Previous</string>
    <string name="sc_course_name">Course name</string>
    <string name="sc_prereqs">Prerequisites</string>
    <string name="sc_sessions">Session(s)</string>
    <string name="sc_returnButton">Return</string>
    <string name="sc_logoutButton">Logout</string>
    <string name="textview">TextView</string>
    <string name="sc_courseNameValue">TextView</string>
    <string name="sc_prerequisitesValue">TextView</string>
</resources>