<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminAdd">

    <TextView
        android:id="@+id/addCourseText"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="ADD A NEW COURSE"
        android:textSize="25dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/adminAvailabilityText"
        android:layout_width="234dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/admin_availability_text"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.305" />

    <TextView
        android:id="@+id/adminPrerequisiteText"
        android:layout_width="234dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/admin_prerequisite_text"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.536" />

    <EditText
        android:id="@+id/adminCourseNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/admin_coursename_input"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/adminCourseCodeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/admin_coursecode_input"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/adminPrerequisiteField"
        android:layout_width="270dp"
        android:layout_height="62dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/admin_prerequisite_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.67" />

    <CheckBox
        android:id="@+id/summer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Summer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/winter"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.421" />

    <CheckBox
        android:id="@+id/winter"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:text="Winter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.421" />

    <CheckBox
        android:id="@+id/fall"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:text="Fall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/winter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/adminAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        app:layout_constraintVertical_bias="0.856" />

</androidx.constraintlayout.widget.ConstraintLayout>